added decrease key

--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -24,6 +24,12 @@ nav ul li a:after {
   background: #aaa;
   height: 1px;
 }
+
 nav ul li a:hover:after {
   width: 100%;
+}
+
+.navbar-custom {
+    background-color: #EEEEEE;
+    font-family: 'Oswald', sans-serif;
 }
